welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:14: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
  if(getY() < y-1){setY(getY()+1);i += 1;ecritMessage()}
                                         ^ColumnByColumn:15: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
  else if(getY() == y-1){setPos(getX()+1,0); i += 1;ecritMessage()}
                                                    ^